--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "contentful": "^7.14.6",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.5.13",
+    "react-query-devtools": "^2.4.2",
     "react-scripts": "3.4.2"
   },
   "scripts": {
